--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,7 @@
           <artifactId>hibernate-core</artifactId>
           <version>5.4.1.Final</version>
       </dependency>
-    <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
-      <version>6.0</version>
-    </dependency>
-    <dependency>
+       <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
       <version>2.0.1.Final</version>
@@ -78,11 +73,13 @@
       <artifactId>ant</artifactId>
       <version>1.8.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mortbay.jetty/servlet-api-2.5 -->
     <dependency>
       <groupId>org.mortbay.jetty</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>servlet-api-2.5</artifactId>
       <version>6.1.7</version>
     </dependency>
+
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
